Fixed bug where widget is overflowing when message is added.

--- a/src/assets/scss/_jumbotron-themes.scss
+++ b/src/assets/scss/_jumbotron-themes.scss
@@ -67,6 +67,7 @@
 				p {
 					font-size: 11px !important;
 					margin-bottom: .625em !important;
+					text-shadow: none !important;
 				}
 			}
 		}
@@ -91,6 +92,8 @@
 		transform: scale(1) !important;
 		width: 100% !important;
 		max-width: 100% !important;
+		padding-top: 0 !important;
+		padding-bottom: 0 !important;
 		padding-left: 1.25rem !important;
 		padding-right: 1.25rem !important;
 
@@ -126,10 +129,12 @@
 			max-width: 100% !important;
 		}
 
+		&__message-container,
 		&__additional-details {
 			padding-left: 6px !important;
 		}
 
+		&__message-container,
 		&__nonprofit-details {
 			p {
 				margin-bottom: 4px;
